Port FOCIL changes to Glamsterdam devnet 4